<resources>
    <string name="app_name">Plantide</string>
    <string name="mes_plantes">Mes plantes</string>
    <string name="desc_btn">Bouton prendre en photo</string>
    <string name="logo_application">Logo Application</string>
    <string name="identification">Identification</string>
    <string name="identifier_la_plante">Identifier la plante</string>
    <string name="add_image_btn">Add image btn</string>
    <string name="ajouter_jusqu_5_photos">Ajouter jusqu\'à 5 photos !</string>
    <string name="services">Services</string>
    <string name="slider_service">Slider service</string>
    <string name="mes_notes_personelles">Mes notes personelles</string>
    <string name="notes_placeholder">Trouvée en bord de route</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="trier">Trier par</string>
    <string name="supprimer">Supprimer</string>
    <string name="nom_de_la_plante">Nom de la plante</string>
    <string name="notes_personnelles">Notes personnelles</string>
    <string name="_15_f_vrier_2023">15 février 2023</string>
    <string name="retake_button">Retake button</string>
    <string name="en_savoir_plus">En savoir plus</string>
    <string name="confiance_info">
    L\'indice de confiance est représenté par la couleur du slider :\nrouge = mauvais &lt; 30% \nbleu =  30% &lt; moyen &lt; 70% \nvert = très bon &gt; 70%\nCliquez sur la valeur pour avoir l\'indice de confiance exacte
    </string>

    <string name="help">Aide</string>

</resources>