<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/rounded_white_background"
    android:layout_marginBottom="10dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nomPlanteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_de_la_plante"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntumedium"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/notesTextView"
            android:layout_width="wrap_content"
            android:fontFamily="@font/ubunturegular"
            android:layout_height="wrap_content"
            android:text="@string/notes_personnelles"
            android:textSize="16sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntumedium"
            android:text="@string/_15_f_vrier_2023"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imageViewPlante"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="fitCenter"
            android:layout_below="@id/dateTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" />

    </RelativeLayout>


    <ImageButton
        android:id="@+id/supprimerButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/trash"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:contentDescription="@string/supprimer"
        />

</LinearLayout>
