<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_plant">

<ImageView
    android:id="@+id/logo_plantide"
    android:layout_width="200dp"
    android:scaleType="fitCenter"
    android:layout_height="200dp"
    android:layout_marginTop="100dp"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/logo_application"
    android:src="@drawable/logo_plantide"
/>
    <!-- Bouton pour capturer une photo -->
    <ImageButton
        android:layout_below="@+id/logo_plantide"
        android:id="@+id/take_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_btn"
        android:scaleType="fitCenter"
        android:src="@drawable/add_photo"
        android:layout_marginTop="20dp"/>
<com.google.android.material.button.MaterialButton
    android:id="@+id/myPlantsBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="55dp"
    android:layout_below="@+id/take_photo"
    android:fontFamily="@font/ubuntumedium"
    android:text="@string/mes_plantes"
    android:textAllCaps="false"
    android:textSize="28sp"
    app:cornerRadius="50dp"
    android:padding="20dp"
    android:textColor="@color/black"
    android:backgroundTint="@color/white"/>

</RelativeLayout>
